# streamlit-color-palette

./: LICENSE  README.md  pyproject.toml  requirements.txt
myproject/: app.py  module.py  pyproject.toml
myproject/myproject/: const.py
