[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryotaro Ogawa",email = "ogaryo3305@gmail.com"}
]
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "streamlit (==1.48.1)",
    "numpy (==2.3.2)",
    "scikit-learn (==1.7.1)",
    "pillow (==11.3.0)",
    "matplotlib (==3.10.5)",
    "pandas (==2.3.1)"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
